# ReactNativeJUCE-Step1

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  ReactNativeJUCE-Step1.jucer  doxygen.dox
Builds/CLion/: CMakeLists.txt  Release-Info-App.plist
JavaScript/example/: package-lock.json  package.json
JavaScript/react-native-juce/: package-lock.json  package.json
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Cpp-JavaScriptCore/: CJSClass.h  CJSConstructor.cpp  CJSConstructor.h  CJSExportClass.h  CJSFunction.cpp  CJSFunction.h  CJSObject.cpp  CJSObject.h  CJSUtil.cpp  CJSUtil.h  CJSValue.cpp  CJSValue.h  Cpp-JavaScriptCore.cpp  Cpp-JavaScriptCore.h  Cpp-JavaScriptCore.mm  MagicConversion.cpp  MagicConversion.h
Source/JSC-JUCE/: JSC-JUCE.cpp  JSC-JUCE.h
docs/html/: _c_j_s_class_8h.html  _c_j_s_class_8h_source.html  _c_j_s_constructor_8cpp.html  _c_j_s_constructor_8cpp_source.html  _c_j_s_constructor_8h.html  _c_j_s_constructor_8h_source.html  _c_j_s_export_class_8h.html  _c_j_s_export_class_8h.js  _c_j_s_export_class_8h_source.html  _c_j_s_function_8cpp.html  _c_j_s_function_8cpp_source.html  _c_j_s_function_8h.html  _c_j_s_function_8h.js  _c_j_s_function_8h_source.html  _c_j_s_object_8cpp.html  _c_j_s_object_8cpp_source.html  _c_j_s_object_8h.html  _c_j_s_object_8h_source.html  _c_j_s_util_8cpp.html  _c_j_s_util_8cpp.js  _c_j_s_util_8cpp_source.html  _c_j_s_util_8h.html  _c_j_s_util_8h.js  _c_j_s_util_8h_source.html  _c_j_s_value_8cpp.html  _c_j_s_value_8cpp_source.html  _c_j_s_value_8h.html  _c_j_s_value_8h_source.html  _j_s_c-_j_u_c_e_8h.js  (+82 more)
tests/: AllTests.cpp  Main.cpp
(+81 files in other folders)
